# bbc-microbit

./: CMakeLists.txt  README.md
config/: sdk_config.h
include/drivers/: I2CMaster.h  LCDDisplay.h  SPIMaster.h  UART.h
include/utils/: CircularBuffer.h
scripts/: convert_bmp.py
source/: main.cpp
source/drivers/: I2CMaster.cpp  LCDDisplay.cpp  SPIMaster.cpp  UART.cpp
system/: Makefile  ble_demo.ld
